@@ -6,10 +6,11 @@ import com.mojang.brigadier.context.ParsedArgument;
 import com.mojang.brigadier.context.ParsedCommandNode;
 import net.minecraft.client.Minecraft;
 import net.minecraft.server.level.ServerLevel;
-import net.minecraftforge.event.CommandEvent;
-import net.minecraftforge.event.TickEvent;
-import net.minecraftforge.eventbus.api.SubscribeEvent;
-import net.minecraftforge.fml.common.Mod;
+import net.neoforged.bus.api.SubscribeEvent;
+import net.neoforged.fml.common.EventBusSubscriber;
+import net.neoforged.neoforge.client.event.ClientTickEvent;
+import net.neoforged.neoforge.event.CommandEvent;
+import net.neoforged.neoforge.event.tick.ServerTickEvent;
 import wardentools.ModMain;
 import wardentools.worldgen.dimension.ModDimensions;
 
@@ -19,20 +20,20 @@ import java.util.List;
  * This class register all the weather ticks and is in charge of client/server sync.
  */
 
-@Mod.EventBusSubscriber(modid = ModMain.MOD_ID)
+@EventBusSubscriber(modid = ModMain.MOD_ID)
 public class AbyssWeatherEvent {
 	public static final AbyssWeatherManager WEATHER_MANAGER = new AbyssWeatherManager();
 	public static final AbyssFogClientHandler CLIENT_WEATHER = new AbyssFogClientHandler();
 	
 	@SubscribeEvent
-	public static void onServerTickEvent(TickEvent.ServerTickEvent event) {
+	public static void onServerTickEvent(ServerTickEvent event) {
 		ServerLevel abyssLevel = event.getServer().getLevel(ModDimensions.ABYSS_LEVEL_KEY);
 		if (abyssLevel == null) return;
 		WEATHER_MANAGER.tick(abyssLevel);
 	}
 
 	@SubscribeEvent
-	public static void onClientLevelTickEvent(TickEvent.ClientTickEvent event) {
+	public static void onClientLevelTickEvent(ClientTickEvent event) {
 		Minecraft minecraft = Minecraft.getInstance();
 		if (minecraft.level == null || minecraft.player == null) return;
 		CLIENT_WEATHER.updateFogDistanceOnTick(minecraft.level);
@@ -41,7 +42,7 @@ public class AbyssWeatherEvent {
 	@SubscribeEvent
 	public static void onWeatherCommand(CommandEvent event) {
 		CommandContextBuilder<?> context = event.getParseResults().getContext();
-		String command = context.getNodes().get(0).getNode().getName();
+		String command = context.getNodes().getFirst().getNode().getName();
         if (command.equals("weather")) {
             handleWeatherCommand(context, event.getParseResults().getContext().getSource().getLevel());
         }
